--- a/week3/index.css
+++ b/week3/index.css
@@ -1,7 +1,48 @@
 body{
-	background-color: pink;
+	background-color: lightblue;
 }
 button{
-	background-color:blue;
 	color: white;
+}
+
+.Taki{
+	background-color: #652D90;
+	padding: 20px;
+	margin-right: 500px;
+	margin-left: 500px;
+	font-size: 60px;
+	text-align: center;
+	height: 1000px;
+;
+}
+.red{
+	background-color: red;
+	height: 150px;
+	width:150px;
+	font-size: 25px;
+	color: white;
+	text-align: center;
+	border-color: white;
+	border-style: solid;
+	border-width: 5px;
+}
+h1{
+	color: yellow;
+	font-family: 'Sriracha', cursive;
+	transform: rotate(-20deg)
+}
+.fuego{
+	transform: rotate(-20deg);
+	margin-bottom: 200px;
+	background-color: yellow;
+	color: #652D90;
+	text-align: center;
+	width: 500px;
+	margin-left: 200px;
+	font-family: 'Coda Caption', sans-serif;
+	font-size: 30px;
+}
+.chip{
+	width: 50%;
+
 }
